# UptimeGuard

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2ed80692dcea_add_is_verified_and_is_active_col_to_.py  56b4d4ed9d11_add_email_col_to_user_table.py  ce6bff6a4cc2_remode_username_colform_user_table.py  f83b53433d43_user_and_url_database_migrate.py
src/: celery_task.py  config.py  errors.py  mail.py  main.py  middleware.py
src/db/: database.py  redis.py
src/models/: model_auth.py  model_url.py
src/routes/: route_auth.py  route_url.py
src/schemas/: schema_auth.py  schema_url.py
src/services/: dependencies_url.py  service_auth.py  service_url.py
src/utils/: dependencies.py  jwt_setup.py  permissions.py  utils.py
